--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,8 @@
 
 @media (max-width: 991px) {
 
+  
+
   .slider_section {
     min-height: auto;
   }
@@ -89,6 +91,16 @@
 
 @media (max-width: 480px) {
 
+  .img-centralizada{ 
+    max-width: 280px !important; 
+  }
+
+  .img-projeto{
+    width: 370px !important;
+    height: 350px !important;
+    border-radius: 200px;
+}
+
   .slider_section .carousel-control-prev,
   .slider_section .carousel-control-next {
     top: 88%;
@@ -107,6 +119,8 @@
   .slider_section .carousel-control-next {
     top: 90%;
   }
+
+ 
 }
 
 @media (min-width: 1200px) {
