--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1820,6 +1820,13 @@ pre code {
 }
 
 @media (max-width: 991.98px) {
+
+  .carousel-control-next, .carousel-control-prev {
+    top: 20% !important;
+
+  }
+
+
   .table-responsive-lg {
     display: block;
     width: 100%;
