wip: alteracoes site flor de lotus

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1822,6 +1822,8 @@ pre code {
 @media (max-width: 991.98px) {
 
   .whatsapp {
+    border-radius: 80px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     top: 40% !important; 
   }
 
