--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ body {
   padding: 90px 0;
 }
 
+.img_container  img{ 
+  max-width: 100%;
+  object-fit: cover;
+  height: 1000px;
+}
+ 
+
 .layout_padding2 {
   padding: 45px 0;
 }
@@ -101,7 +108,33 @@ h2 {
   height: 50px;
 }
 
-.whatsapp {
+.whatsapp::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  border-radius: inherit;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  transition: all 500ms ease-in-out;
+  opacity: 0;
+  animation: flash 100ms ease-in-out;
+  transform: scaleX(2) scaleY(2);
+}
+
+.whatsapp:hover::before {
+  opacity: 1;
+  transform: scaleX(1) scaleY(1);
+}
+
+.whatsapp button i:hover{
+  color: white ;
+}
+
+
+.whatsapp { 
   top: 70% ; 
 }
 .whatsapp::before{
@@ -118,7 +151,7 @@ h2 {
 
 .whatsapp button i {
   display: block; 
-  color: white !important;
+  color: black ;
   margin: 2.5px 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -341,15 +374,30 @@ a:focus {
 }
 
 .slider_section .detail-box {
-  padding-top: 1000px;
+  padding-top: 200px;
   position: relative;
   width: 100%;
   z-index: 4;
+}   
+
+.ervice_section img{
+}
+
+.slider_section .detail-box .inner_detail-box:hover {
+  opacity: 1;
+  transition: all 500ms ease-in-out; 
+  animation: flash 100ms ease-in-out;
+  transform: scaleX(1.3) scaleY(1.3);
+}
+.slider_section .detail-box .inner_detail-box::before { 
+  opacity: 1 !important;
+  transform: scaleX(1) scaleY(1);
 }
 
 .slider_section .detail-box .inner_detail-box {
+  opacity: 0.06;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-color: #D2CDBD;
-  opacity: calc(1); 
   color: black;
   padding: 45px;
   border-radius: 5px;
@@ -381,10 +429,10 @@ a:focus {
   color: #ffffff;
 }
 
-.slider_section .img-box img {
+/* .slider_section .img-box img {
   min-width: 100%;
   min-height: 100%;
-}
+} */
 
 .slider_section .img-box::before {
   content: "";
@@ -576,7 +624,9 @@ a:focus {
 }
 
 .service_section .box .img-box img {
-  width: 100%;
+  
+  height: 130px !important;
+    width: 130px !important;
   border-radius: 100%;
   border: 5px solid #ffffff;
 }
@@ -957,7 +1007,7 @@ a:focus {
 }
 
 .info_section .info_contact a:hover:hover {
-  color: #B8B29D;
+  color: black;
 }
 
 .info_section .social_box {
@@ -988,8 +1038,8 @@ a:focus {
 }
 
 .info_section .social_box a:hover {
-  color: #B8B29D;
-  border-color: #B8B29D;
+  color: #C1558B;
+  border-color: #C1558B;
 }
 
 /* footer section*/
