--- a/css/style.css
+++ b/css/style.css
@@ -1057,4 +1057,12 @@ a:focus {
 .footer_section p a {
   color: inherit;
 }
+
+.slider_section .img-box{
+  width: 100% important;
+}
+
+.slider_section .img-box img{
+  width: 100% important;
+}
 /*# sourceMappingURL=style.css.map */
